<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BlocParty</string>
    <string name="app_id">405174902993677</string>
    <string name="twitter_key">LwF9hhbHdIrmSYNAkp5AWvkTX</string>
    <string name="twitter_secret">oJ9kvzI3s2GMfblYvzTj6wGeimuW1O3gVDl5apJf5GDdERqqW1</string>
    <string name="twitter_callback_url">oauth://com.bloc.blocparty.Twitter_oAuth</string>
    <string name="instagram_id">b2f8ee09adaf466e803d9785f85f81ba</string>
    <string name="instagram_secret">54b411db1acd4851a6ef297476f90853</string>
    <string name="instagram_uri">instagram://connect</string>

    <string name="action_settings">Settings</string>
    <string name="action_accounts">Accounts</string>
    <string name="action_collections">Collections</string>
    <string name="action_photo">Take Photo</string>
    <string name="action_new_collection">New Collection</string>
    <string name="action_home">Home</string>

    <string name="twitter_btn_login">Log In With Twitter</string>
    <string name="twitter_btn_logout">Log Out of Twitter</string>

    <string name="instagram_btn_login">Log in with Instagram</string>
    <string name="instagram_btn_logout">Log out of Instagram</string>

    <string name="menu_save">Save Image</string>
    <string name="menu_share">Share Image</string>
    <string name="menu_collection">Add To Collection</string>

    <string name="toast_image_saved">Image Saved To Gallery</string>
    <string name="toast_added_to_collection">Added to Collection</string>
    <string name="toast_image_posted">Image Posted to FB and Twitter</string>

    <string name="btn_submit">Post Image</string>

    <string name="new_collection_hint">Collection Name</string>
    <string name="new_collection_title">New Collection</string>
    <string name="new_collection_confirm">Create Collection</string>
    <string name="new_collection_cancel">Cancel</string>

    <string name="tutorial_btn_skip">Skip Tutorial</string>
    <string name="tutorial_btn_next">Next</string>
    <string name="tutorial_btn_finish">Finish</string>

</resources>
