<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.bloc.blocparty.BlocParty" >

    <item
        android:id="@+id/action_home"
        android:title="@string/action_home"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_photo"
        android:title="@string/action_photo"
        android:icon="@android:drawable/ic_menu_camera"
        android:showAsAction="always"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/action_collecions"
        android:title="@string/action_collections"
        android:icon="@android:drawable/ic_menu_gallery"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_accounts"
        android:title="@string/action_accounts"
        app:showAsAction="ifRoom"
        />
</menu>
